# todo-rest-rust

./: Cargo.toml  Dockerfile  Rocket.toml
migrations/: V1__todo_table.sql
src/: errors.rs  main.rs  migrations.rs
src/service/: entity.rs  mod.rs  repository.rs
